# Copyright (c) 2022 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# deqp-gles2-accuracy build

import("//build/ohos.gni")
import("//third_party/vk-gl-cts/vk_gl_cts.gni")

config("deqp-gles2-accuracy_config") {
  cflags_cc = deqp_common_cflags_cc
  defines = deqp_common_defines
}

ohos_source_set("deqp-gles2-accuracy_source") {
  sources = [
    "//third_party/vk-gl-cts/modules/gles2/accuracy/es2aAccuracyTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/accuracy/es2aAccuracyTests.hpp",
    "//third_party/vk-gl-cts/modules/gles2/accuracy/es2aTextureFilteringTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/accuracy/es2aTextureFilteringTests.hpp",
    "//third_party/vk-gl-cts/modules/gles2/accuracy/es2aTextureMipmapTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/accuracy/es2aTextureMipmapTests.hpp",
    "//third_party/vk-gl-cts/modules/gles2/accuracy/es2aVaryingInterpolationTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/accuracy/es2aVaryingInterpolationTests.hpp",

  ]
  include_dirs = [
    "//third_party/vk-gl-cts/modules/glshared",
    "//third_party/vk-gl-cts/modules/gles2/accuracy",
    "//third_party/vk-gl-cts/modules/gles2",
  ]
  
  include_dirs += deqp_common_include_dirs

  deps = [
    "//third_party/vk-gl-cts/framework/common:libdeqp_tcutil",
    "//third_party/vk-gl-cts/framework/opengl:libdeqp_glutil",
    "//third_party/vk-gl-cts/modules/glshared:libdeqp-gl-shared",
  ]

  configs = [ ":deqp-gles2-accuracy_config" ]

}

ohos_static_library("libdeqp-gles2-accuracy") {
  deps = [ ":deqp-gles2-accuracy_source" ]
  part_name = "graphic_standard"
  subsystem_name = "graphic"
}
