# Copyright (c) 2022 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# deqp-gles2-functional build

import("//build/ohos.gni")
import("//third_party/vk-gl-cts/vk_gl_cts.gni")

config("deqp-gles2-functional_config") {
  cflags_cc = deqp_common_cflags_cc
  defines = deqp_common_defines
}

ohos_source_set("deqp-gles2-functional_source") {
  sources = [
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fApiCase.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fAttribLocationTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fBlendTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fBooleanStateQueryTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fBufferObjectQueryTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fBufferTestUtil.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fBufferWriteTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fClipControlTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fClippingTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fColorClearTest.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fDebugMarkerTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fDefaultVertexAttributeTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fDepthRangeTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fDepthStencilClearTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fDepthStencilTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fDepthTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fDitheringTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fDrawTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fFboApiTest.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fFboCompletenessTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fFboRenderTest.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fFboStateQueryTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fFloatStateQueryTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fFlushFinishTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fFragOpInteractionTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fFunctionalTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fImplementationLimitTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fIntegerStateQueryTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fLifetimeTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fLightAmountTest.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fMultisampleTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fMultisampledRenderToTextureTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fNegativeBufferApiTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fNegativeFragmentApiTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fNegativeShaderApiTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fNegativeStateApiTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fNegativeTextureApiTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fNegativeVertexArrayApiTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fPolygonOffsetTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fPrerequisiteTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fRandomFragmentOpTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fRandomShaderTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fRasterizationTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fRboStateQueryTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fReadPixelsTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fScissorTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fShaderAlgorithmTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fShaderApiTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fShaderBuiltinVarTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fShaderConstExprTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fShaderDiscardTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fShaderExecuteTest.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fShaderFragDataTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fShaderIndexingTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fShaderInvarianceTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fShaderLoopTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fShaderMatrixTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fShaderOperatorTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fShaderReturnTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fShaderStateQueryTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fShaderStructTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fShaderTextureFunctionTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fStencilTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fStringQueryTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fTextureCompletenessTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fTextureFilteringTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fTextureFormatTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fTextureMipmapTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fTextureSizeTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fTextureSpecificationTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fTextureStateQueryTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fTextureUnitTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fTextureWrapTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fUniformApiTests.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fVertexArrayTest.cpp",
    "//third_party/vk-gl-cts/modules/gles2/functional/es2fVertexTextureTests.cpp",
  ]
  include_dirs = [
    "//third_party/vk-gl-cts/modules/glshared",
    "//third_party/vk-gl-cts/modules/gles2/functional",
    "//third_party/vk-gl-cts/modules/gles2",
  ]

  include_dirs += deqp_common_include_dirs

  deps = [
    "//third_party/vk-gl-cts/modules/glshared:libdeqp-gl-shared",
    "//third_party/vk-gl-cts/framework/opengl:libdeqp_glutil",
    "//third_party/vk-gl-cts/framework/opengl/simplereference:libdeqp_glutil-sglr",
    "//third_party/vk-gl-cts/framework/common:libdeqp_tcutil",
    "//third_party/vk-gl-cts/framework/referencerenderer:libdeqp_referencerenderer",
  ]

  configs = [ ":deqp-gles2-functional_config" ]

}

ohos_static_library("libdeqp-gles2-functional") {
  deps = [ ":deqp-gles2-functional_source" ]
  part_name = "graphic_standard"
  subsystem_name = "graphic"
}
